johnlimadev/force-app/main/default/objects/Case_Approver__mdt/Case_Approver__mdt.object-meta.xml
<CustomObject>
    <label>Case Approver</label>
    <pluralLabel>Case Approvers</pluralLabel>
</CustomObject>