johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>