johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Approver_Username__c.field-meta.xml
<CustomField>
    <fullName>Approver_Username__c</fullName>
    <label>Approver Username</label>
    <type>Email</type>
</CustomField>