johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Name_And_Username__c.field-meta.xml
<CustomField>
    <fullName>Name_And_Username__c</fullName>
    <label>Name And Username</label>
    <length>120</length>
    <type>Text</type>
</CustomField>