johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Pend_Case__c.field-meta.xml
<CustomField>
    <fullName>Pend_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pend Case</label>
    <type>Checkbox</type>
</CustomField>