johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Return_Case__c.field-meta.xml
<CustomField>
    <fullName>Return_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Case</label>
    <type>Checkbox</type>
</CustomField>