johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Skip_Approval__c.field-meta.xml
<CustomField>
    <fullName>Skip_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Approval</label>
    <type>Checkbox</type>
</CustomField>