johnlimadev/force-app/main/default/objects/Case_Approver__mdt/fields/Wakeup_Case__c.field-meta.xml
<CustomField>
    <fullName>Wakeup_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wakeup Case</label>
    <type>Checkbox</type>
</CustomField>